--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
     <nav>
         <ul>
             <li id="logo"><i class="fa fa-spotify"></i><span>Spotify</span></li>
-            <li class="searchbox">
-                <input type="search" placeholder="enter song here">
-                <i class="fa fa-search" style="height: 10px;"></i>
+           <li class="searchbox">
+                <input class="fa-search"type="search" placeholder="enter song here">
+                <button class="fa fa-search search-icon"></button>
+                <button id="autoplay">AutoPlay</button>
             </li>
         </ul>
     </nav>
